style: fix alignment of asides

--- a/src/css/_composition.css
+++ b/src/css/_composition.css
@@ -56,7 +56,7 @@ Composition rules are not for aesthetic elements such as fonts, colors, borders,
 	@container article (width > 30rem) {
 		aside {
 			max-width: 50cqw;
-			margin-inline-start: var(--space-m);
+			margin-inline-start: var(--space-3xs);
 		}
 	}
 
@@ -89,6 +89,10 @@ Composition rules are not for aesthetic elements such as fonts, colors, borders,
 
 	footer {
 		--sidebar-gap: var(--space-s);
+	}
+
+	.social-links {
+		padding-block-start: var(--space-xs);
 	}
 
 	/* General layouts */
